# pyTorchPredictorWin10

./: CMakeLists.txt  README.md  torchPredictor.lib
torchPredictor/: CMakeLists.txt  torchBinaryClass.cpp  torchBinaryClass.h  torchPredictor.cpp  torchPredictor.h  torchPredictorRaw.cpp  torchPredictorRaw.h
